# email-triage-env

./: .env.example  .gitignore  Dockerfile  README.md  comparison_page.py  dashboard.py  dy  emails_easy_classification.json  environment.py  inference.py  models.py  openenv.yaml  pyproject.toml  random_agent.py  requirements.txt  server.py  tasks.py  test_inference.py  validation_result.json
server/: app.py
