[project]
name = "email-triage-env"
version = "1.0.0"
description = "Email Triage Environment for AI agents"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.openenv]
name = "email-triage-env"
version = "1.0.0"