[project]
name = "email-triage-env"
version = "1.0.0"
description = "Email Triage Environment for AI agents"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[project.scripts]
openenv-server = "server.app:main"
server = "server.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.openenv]
name = "email-triage-env"
version = "1.0.0"